--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Xuan@Github.io</h1>
-      <h2 class="project-tagline">Xuan&#39;s Github Blog</h2>
+      <h2 class="project-tagline">Xuan&#39;s Github</h2>
       <a href="https://github.com/liuxuan30/xuanliu.github.io" class="btn">View on GitHub</a>
     </section>
 
