--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/liuxuan30/xuanliu.github.io">Xuan@Github.io</a> is maintained by <a href="https://github.com/liuxuan30">liuxuan30</a>.</span>
+        <span class="site-footer-owner">You can reach me out on Github by creating new issues or send me emails</span>
       </footer>
 
     </section>
